BZ790822 administer section form items alignment fix
The checkboxes are now aligned properly, in IE it seems that the left margin is ignored, so there isn't much to do about it.
Also the file inputs vary in height in different browsers, so the label alignment is little off in ie. Firefox and Chrome are okay.

--- a/src/app/stylesheets/layout.scss
+++ b/src/app/stylesheets/layout.scss
@@ -3439,10 +3439,6 @@ body.administer form.generic{
     font-size: 12px;
     text-shadow: 0px 1px 0px #ffffff;
     font-weight: normal;
-
-    &.checkbox{
-      padding: 3px 7px 0px 0px;
-    }
   }
 
   label span{
@@ -3459,6 +3455,7 @@ body.administer form.generic{
     -moz-box-shadow:inset 0 1px 2px rgba(0, 0, 0, 0.50);
     -webkit-box-shadow:inset 0 1px 2px rgba(0, 0, 0, 0.50);
   }
+  input[type="checkbox"]{ margin: 6px 0px 5px 0px; }
 
   input.long{
     width: 400px;
